--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -66,3 +66,9 @@
     location = {Montr\'{e}al, Canada},
     series = {NIPS'18}
 }
+
+@article{bird_hybrid_2022, 
+  author = {Trevor J. Bird}, 
+  title = {Hybrid Zonotopes: A Mixed-Integer Set Representation for the Analysis of Hybrid Systems},
+  year = {2022},
+}
